move service worker to project root. to see if better scoping fixes the issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -111,5 +111,5 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "files": ["./Javascript/PlaylistCreator.ts", "./Javascript/ServiceWorker.ts"]
+  "files": ["./Javascript/PlaylistCreator.ts", "ServiceWorker.ts"]
 }
