!!!MASSIVE RECODE!!! Song class added. Handles generating songLoaders, maintaining File objects, maintaining Howl objects, and maintaining local song state. SongLoader class added to handle loading songs. Can abort loading when commanded, and it can allow multiple functions to await its loading to finish rather than restarting loading from the beginning. Type checking fixed for Howl and Howler classes in VSC. Fixed errors in PlaylistCreator.ts. Fixed currentSongIndex being incorrect when reordering songs. Code is currently a little bit messy in some spots, and hopefully will be improved in the future.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "devDependencies": {
+    "@types/howler": "^2.2.11",
     "@types/node": "^20.12.4",
     "typescript": "^5.4.3"
+  },
+  "dependencies": {
+    "howler": "^2.2.4"
   }
 }
