table values now scroll when too big

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
         "codehs",
         "hoverable",
         "playpause",
-        "smallplaypause"
+        "Regen",
+        "smallplaypause",
+        "Spacebar"
     ],
     "cSpell.ignorePaths": [
         "package-lock.json",
