navigation with keyboard & arrow keys is now fully supported. Fix missing Latch and Toxic Trail ability (waiting for CreatureData module to be updated with the new ability)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "codehs",
         "hoverable",
+        "Necropoison",
         "playpause",
         "Regen",
         "smallplaypause",
